# neko

./: .build.sh  .gitignore
core/: Cargo.toml  build.rs
core/src/: ffi.rs  lib.rs
core/src/text/: buffer.rs  cursor.rs  editor.rs  mod.rs  selection.rs
ui/: .gitignore  CMakeLists.txt  main.cpp
ui/features/editor/: editor_widget.cpp  editor_widget.h
ui/features/window/: window.cpp  window.h
